@@ -1,3 +1,5 @@
+- Refactor: Replace usage of deprecated OccupationPeriodServices
+
 2.14.0 (18-10-2022)
 - Refactor: Remove unused Struts module configuration
 
